--- a/diploma/project/app_shop/templates/app_shop/inc/_basket_card.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_basket_card.html
@@ -9,15 +9,15 @@
 	</div>
 
 	<div class="Cart-block Cart-block_info">
-		<a class="Cart-title" href="#">Ноутбук</a>
+		<a class="Cart-title" href="#">{{product.title}}</a>
 		<div class="Cart-desc">
-			Это супер ноутбук, 3 гб. 4 ядра
+			{{product.description}}
 		</div>
 	</div>
 
 	<div class="Cart-block Cart-block_price">
 		<div class="Cart-price">
-			80.00$
+			{{product.price}}$
 		</div>
 	</div>
 
