--- a/diploma/project/app_shop/templates/app_shop/inc/_cards.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_cards.html
@@ -28,7 +28,7 @@
               {% endfor %}
           </div>
           <div class="Card-hover">
-            <a class="Card-btn" href="#">
+            <a class="Card-btn" href="{% url 'add_product_in_basket' slug=product.slug %}">
               <img src="{% static 'assets/img/icons/card/cart.svg' %}" alt="cart.svg"/>
             </a>
           </div>
