--- a/diploma/project/app_profile/templates/app_profile/history_order.html
+++ b/diploma/project/app_profile/templates/app_profile/history_order.html
@@ -34,182 +34,10 @@
 			<div class="Section-content">
 			
 				<div class="Orders">
-			
-					<div class="Order Order_anons">
-			
-						<div class="Order-personal">
-			
-							<div class="row">
-								
-								<div class="row-block">
-									<a class="Order-title" href="oneorder.html">Заказ&#32;<span class="Order-numberOrder">№200</span>&#32;от&#32;<span class="Order-dateOrder">21.07.2020</span></a>
-								</div>
-								
-								<div class="row-block">
-									<div class="Order-info Order-info_delivery">
-										<div class="Order-infoType">
-											Тип доставки:
-										</div>
-										<div class="Order-infoContent">
-											Обычная доставка
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_pay">
-										<div class="Order-infoType">
-											Оплата:
-										</div>
-										<div class="Order-infoContent">
-											Онлайн картой
-										</div>
-									</div>
-
-									<div class="Order-info">
-										<div class="Order-infoType">
-											Общая стоимость:
-										</div>
-										<div class="Order-infoContent">
-											<span class="Order-price">200.99$</span>
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_status">
-										<div class="Order-infoType">
-											Статус:
-										</div>
-										<div class="Order-infoContent">
-											Не оплачен
-										</div>
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-					<div class="Order Order_anons">
 					
-						<div class="Order-personal">
-					
-							<div class="row">
-					
-								<div class="row-block">
-									<a class="Order-title" href="oneorder.html">Заказ&#32;<span class="Order-numberOrder">№199</span>&#32;от&#32;<span class="Order-dateOrder">20.07.2020</span></a>
-								</div>
-
-								<div class="row-block">
-								
-									<div class="Order-info Order-info_delivery">
-										<div class="Order-infoType">
-											Тип доставки:
-										</div>
-										<div class="Order-infoContent">
-											Обычная доставка
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_pay">
-										<div class="Order-infoType">
-											Оплата:
-										</div>
-										<div class="Order-infoContent">
-											Онлайн картой
-										</div>
-									</div>
-
-									<div class="Order-info">
-										<div class="Order-infoType">
-											Общая стоимость:
-										</div>
-										<div class="Order-infoContent">
-											<span class="Order-price">100.99$</span>
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_status">
-										<div class="Order-infoType">
-											Статус:
-										</div>
-										<div class="Order-infoContent">
-											Оплачен
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_error">
-										<div class="Order-infoType">
-											Оплата не прошла:
-										</div>
-										<div class="Order-infoContent">
-											Оплата не выполнена, т.к. вы подозреваетесь в нетолерантности
-										</div>
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-					<div class="Order Order_anons">
-					
-						<div class="Order-personal">
-					
-							<div class="row">
-								
-								<div class="row-block">
-									<a class="Order-title" href="oneorder.html">Заказ&#32;<span class="Order-numberOrder">№194</span>&#32;от&#32;<span class="Order-dateOrder">01.07.2020</span></a>
-								</div>
-
-								<div class="row-block">
-									
-									<div class="Order-info Order-info_delivery">
-										<div class="Order-infoType">
-											Тип доставки:
-										</div>
-										<div class="Order-infoContent">
-											Обычная доставка
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_pay">
-										<div class="Order-infoType">
-											Оплата:
-										</div>
-										<div class="Order-infoContent">
-											Онлайн картой
-										</div>
-									</div>
-
-									<div class="Order-info">
-										<div class="Order-infoType">
-											Общая стоимость:
-										</div>
-										<div class="Order-infoContent">
-											<span class="Order-price">20.00$</span>
-										</div>
-									</div>
-
-									<div class="Order-info Order-info_status">
-										<div class="Order-infoType">
-											Статус:
-										</div>
-										<div class="Order-infoContent">
-											Доставляется
-										</div>
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
+					{% for order in history_order.orders.all %}
+						{% include 'app_profile/inc/_history_order_card.html' %}
+					{% endfor %}
 
 				</div>
 
