--- a/diploma/project/app_profile/templates/app_profile/inc/_navigate_profile.html
+++ b/diploma/project/app_profile/templates/app_profile/inc/_navigate_profile.html
@@ -10,7 +10,7 @@
 			<a class="menu-link" href="{% url 'history_order' %}">История заказов</a>
 		</li>
 		<li class="menu-item">
-			<a class="menu-link" href="historyview.html">История просмотра</a>
+			<a class="menu-link" href="{% url 'history_review' %}">История просмотра</a>
 		</li>
 	</ul>
 </div>
