--- a/diploma/project/app_profile/templates/app_profile/inc/_navigate_profile.html
+++ b/diploma/project/app_profile/templates/app_profile/inc/_navigate_profile.html
@@ -12,5 +12,8 @@
 		<li class="menu-item">
 			<a class="menu-link" href="{% url 'history_review' %}">История просмотра</a>
 		</li>
+    <li class="menu-item">
+			<a class="menu-link" href="{% url 'logout' %}">Выйти из кабинета</a>
+		</li>
 	</ul>
 </div>
