--- a/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_1.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_1.html
@@ -9,12 +9,13 @@
 		<div class="form-group">
 			<label for="">{{form.telephon_number.label}}</label>
 			{{form.telephon_number}}
+      {{form.telephon_number.errors}}
 		</div>
 
 	</div>
-	
+
 	<div class="Order-footer">
 		<a class="btn btn_success Order-next" href="#step2">Дальше</a>
 	</div>
-	
+
 </div>
