--- a/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_2.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_2.html
@@ -22,6 +22,10 @@
 		<label class="form-label" for="address">{{form.address.label}}</label>
 		{{form.address}}
 	</div>
+  <div class="form-group">
+		<label class="form-label" for="address">{{form.comment.label}}</label>
+		{{form.comment}}
+	</div>
 	<div class="Order-footer">
 		<a class="btn btn_success Order-next" href="#step3">Дальше</a>
 	</div>
