--- a/diploma/project/app_profile/templates/app_profile/login.html
+++ b/diploma/project/app_profile/templates/app_profile/login.html
@@ -5,34 +5,36 @@
 	<div class="wrap">
 		<form class="form" method="post">
 			{% csrf_token %}
-			
+
+      {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+          <label class="form-label">
+            {{error}}
+          </label>
+        {% endfor %}
+      {% endif %}
+
 			<div class="row">
 				<div class="row-block">
 
 					{% for field in form %}
+
 						<div class="form-group">
 							<label class="form-label">
 								{{field.label}}
 							</label>
 							{{field}}
-
-							{% if field.errors %}
-								{% for error in field.errors %}
-									<label class="form-label">
-										{{error}}
-									</label>
-								{% endfor %}
-							{% endif %}
-							
 						</div>
+
 					{% endfor %}
 
 				</div>
 			</div>
-			
+
 			<button class="btn btn_primary btn_lg" type="submit">Войти</button>
-			
+
 		</form>
+    <a class href="{% url 'registration' %}">Регистрация</a>
 
 	</div>
 </div>
