--- a/diploma/project/app_profile/templates/app_profile/profile.html
+++ b/diploma/project/app_profile/templates/app_profile/profile.html
@@ -51,11 +51,13 @@
 										<label class="Profile-fileLabel" for="avatar">{{form.avatar.label}}</label>
 										{{form.avatar}}
 									</div>
+                  {{form.avatar.errors}}
 								</div>
 
 								<div class="form-group">
 									<label class="form-label" for="name">{{form.telephon_number.label}}</label>
 									{{form.telephon_number}}
+									{{form.telephon_number.errors}}
 								</div>
 
 							</div>
@@ -65,6 +67,7 @@
 									<div class="form-group">
 										<label class="form-label">{{field.label}}</label>
 										{{field}}
+                    {{field.errors}}
 									</div>
 								{% endfor %}
 
@@ -73,26 +76,7 @@
 										<button class="btn btn_success" type="submit">Сохранить</button>
 									</div>
 
-									{% if form.errors %}
-										<div class="Profile-danger">
-											{% for error in form.errors.values %}
-												{{error}}
-											{% endfor %}
-										</div>
-									{% elif form_user.errors %}
-										<div class="Profile-danger">
-											{% for error in form_user.errors.values %}
-												{{error}}
-											{% endfor %}
-										</div>
-									{% else %}
-										<div class="Profile-success">
-											Профиль успешно сохранен
-										</div>
-									{% endif %}
-
 								</div>
-
 							</div>
 
 						</div>
