--- a/diploma/project/app_shop/templates/app_shop/order.html
+++ b/diploma/project/app_shop/templates/app_shop/order.html
@@ -2,14 +2,14 @@
 
 {% block main %}
 <div class="Middle Middle_top">
-	
+
 	{% with  title='Оформление заказа' span='Оформление заказа' %}
 		{% include 'inc/header/_middle.html' %}
 	{% endwith %}
 
 	<div class="Section Section_column Section_columnRight Section_columnWide Order">
 		<div class="wrap">
-			
+
 			{% block order_menu %}
 				{% include 'app_shop/inc/_order_menu.html' %}
 			{% endblock  %}
@@ -18,8 +18,15 @@
 
 				<form class="form" method="post">
 					{% csrf_token %}
-					{{form.errors}}
-					
+
+          {% if form.non_field_errors %}
+
+            {% for error in form.non_field_errors %}
+              <p>{{error}}</p>
+            {% endfor %}
+
+          {% endif %}
+
 					{% block order_menu_step_1 %}
 						{% include 'app_shop/inc/order_menu_steps/_order_menu_step_1.html' %}
 					{% endblock  %}
@@ -36,7 +43,7 @@
 						{% include 'app_shop/inc/order_menu_steps/_order_menu_step_4.html' %}
 					{% endblock  %}
 				</form>
-				
+
 			</div>
 		</div>
 	</div>
