--- a/diploma/project/templates/inc/footer/_my_account.html
+++ b/diploma/project/templates/inc/footer/_my_account.html
@@ -1,26 +1,9 @@
 <div class="row-block">
-
 	<strong class="Footer-title">My Account</strong>
-
 	<ul class="menu menu_vt Footer-menu">
-		<li class="menu-item">
-			<a class="menu-link" href="#">Accessories</a>
+    {% for category in categories %}
+    <li class="menu-item">
+			<a class="menu-link" href="{% url 'category' category.slug %}">{{category.title}}</a>
 		</li>
-		<li class="menu-item">
-			<a class="menu-link" href="#">Bags</a>
-		</li>
-		<li class="menu-item">
-			<a class="menu-link" href="#">Cameras</a>
-		</li>
-		<li class="menu-item">
-			<a class="menu-link" href="#">Clothings</a>
-		</li>
-		<li class="menu-item">
-			<a class="menu-link" href="#">Electronics</a>
-		</li>
-		<li class="menu-item">
-			<a class="menu-link" href="#">Fashion</a>
-		</li>
-	</ul>
-
+    {% endfor %}
 </div>
