--- a/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_4.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/order_menu_steps/_order_menu_step_4.html
@@ -1,5 +1,9 @@
 {% load static %}
 
+{% load content_image %}
+
+{% load total_price %}
+
 <div class="Order-block" id="step4">
 	<header class="Section-header Section-header_sm">
 		<h2 class="Section-title">Шаг 4. Подтверждение заказа</h2>
@@ -74,19 +78,19 @@
 
 		<div class="Cart Cart_order">
 
-			{% for product in basket %}
+			{% for product, count in basket.items %}
 
 			<div class="Cart-product">
 				<div class="Cart-block Cart-block_row">
 					<div class="Cart-block Cart-block_pict">
-						<a class="Cart-pict" href="#">
-							<img class="Cart-img" src="{{product.image.url}}" alt="card.jpg">
+						<a class="Cart-pict" href="{{product.get_absolute_url}}">
+							<img class="Cart-img" src="{{product|content_image}}" alt="card.jpg">
 						</a>
 					</div>
 					<div class="Cart-block Cart-block_info">
 						<a class="Cart-title" href="#">{{product.title}}</a>
 						<div class="Cart-desc">
-							Это супер ноутбук, 3 гб. 4 ядра
+							{{product.characteristic}}
 						</div>
 					</div>
 					<div class="Cart-block Cart-block_price">
@@ -97,24 +101,24 @@
 				</div>
 				<div class="Cart-block Cart-block_row">
 					<div class="Cart-block Cart-block_amount">
-						1 шт.
+						{{count}} шт.
 					</div>
 				</div>
 			</div>
 
 			{% endfor %}
-			
+
 			<div class="Cart-total">
 				<div class="Cart-block Cart-block_total">
 					<strong class="Cart-title">Итого:
-					</strong><span class="Cart-price">200.99$</span>
+					</strong><span class="Cart-price">{{basket|total_price}}$</span>
 				</div>
-				
+
 				<div class="Cart-block">
 					<button class="btn btn_primary btn_lg" type="submit">Оплатить</button>
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 </div>
