--- a/diploma/project/app_profile/templates/app_profile/account.html
+++ b/diploma/project/app_profile/templates/app_profile/account.html
@@ -5,7 +5,7 @@
 {% block main %}
 
 <div class="Middle Middle_top">
-		
+
 	{% with title='Личный кабинет' span='Личный кабинет' %}
 		{% include 'inc/header/_middle.html' %}
 	{% endwith %}
@@ -15,13 +15,13 @@
 		<div class="wrap">
 
 			<div class="Section-column">
-					
+
 				<div class="Section-columnSection">
 
 					<header class="Section-header">
 						<strong class="Section-title">Навигация</strong>
 					</header>
-					
+
 					<div class="Section-columnContent">
 
 						{% block navigate_profile %}
@@ -49,8 +49,8 @@
 								<img src="" alt="card.jpg">
 								{% endif %}
 							</div>
-
 						</div>
+
 
 						<div class="Account-column">
 							<div class="Account-name">
@@ -58,10 +58,53 @@
 							</div>
 							<a class="Account-editLink" href="{% url 'profile' %}">Редактировать профиль</a>
 						</div>
-
 					</div>
 
+          <div class="Account-group">
+            <div class="Account-column Account-column_full">
+              <div class="Order Order_anons">
+                <div class="Order-personal">
+                  <div class="row">
+                    <div class="row-block">
+                      <a class="Order-title" href="oneorder.html">Заказ&#32;<span class="Order-numberOrder">№{{last_order.pk}}</span>&#32;от&#32;<span class="Order-dateOrder">{{last_order.created_at}}</span></a>
+                      <div class="Account-editLink">
+                        <a href="{% url 'history_order' %}">История заказов</a>
+                      </div>
+                    </div>
+                    <div class="row-block">
+                      <div class="Order-info Order-info_delivery">
+                        <div class="Order-infoType">
+                          Тип доставки:
+                        </div>
+                        <div class="Order-infoContent">
+                          {{last_order.delivery}}
+                        </div>
+                      </div>
+                      <div class="Order-info Order-info_pay">
+                        <div class="Order-infoType">
+                          Оплата:
+                        </div>
+                        <div class="Order-infoContent">
+                          {{last_order.pay}}
+                        </div>
+                      </div>
+                      <div class="Order-info">
+                        <div class="Order-infoType">
+                          Общая стоимость:
+                        </div>
+                        <div class="Order-infoContent">
+                          {{last_order.total_price}}$
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
 				</div>
+
 
 			</div>
 
@@ -70,5 +113,5 @@
 	</div>
 
 </div>
-      
+
 {% endblock %}
