--- a/diploma/project/templates/inc/_socials.html
+++ b/diploma/project/templates/inc/_socials.html
@@ -2,27 +2,27 @@
 
 <ul class="menu menu_img menu_smallImg {{html_class_socials}}">
 	<li class="menu-item">
-		<a class="menu-link" href="#">
+		<a class="menu-link" href="https://www.facebook.com/">
 			<img src="{% get_static_prefix %}assets/img/icons/social{{block.name.title}}/fb.svg" alt="fb.svg"/>
 		</a>
 	</li>
 	<li class="menu-item">
-		<a class="menu-link" href="#">
+		<a class="menu-link" href="https://www.twitch.tv/">
 			<img src="{% get_static_prefix %}assets/img/icons/social{{block.name.title}}/tw.svg" alt="tw.svg"/>
 		</a>
 	</li>
 	<li class="menu-item">
-		<a class="menu-link" href="#">
+		<a class="menu-link" href="https://www.linkedin.com/">
 			<img src="{% get_static_prefix %}assets/img/icons/social{{block.name.title}}/in.svg" alt="in.svg"/>
 		</a>
 	</li>
 	<li class="menu-item">
-		<a class="menu-link" href="#">
+		<a class="menu-link" href="https://www.pinterest.com/">
 			<img src="{% get_static_prefix %}assets/img/icons/social{{block.name.title}}/pt.svg" alt="pt.svg"/>
 		</a>
 	</li>
 	<li class="menu-item">
-		<a class="menu-link" href="#">
+		<a class="menu-link" href="https://mail.ru/">
 			<img src="{% get_static_prefix %}assets/img/icons/social{{block.name.title}}/mail.svg" alt="mail.svg"/>
 		</a>
 	</li>
