--- a/diploma/project/templates/inc/footer/_contacts.html
+++ b/diploma/project/templates/inc/footer/_contacts.html
@@ -1,16 +1,16 @@
+{% load get_admin_data %}
+
+{% get_admin_data as admin %}
+
 <div class="row-block">
 <strong class="Footer-title">Contacts</strong>
 <p>
-    Phone: 8.800.200.600
+    Phone: {{admin.telephon_number}}
     <br>
-    Email: Support@ninzio.com
+    Email: {{admin.user.email}}
     <br>
-    Skype: techno
+    Skype:
     <br>
-    Address: New York, north
-    <br>
-    Avenue 26/7
-    <br>
-    0057
+    Address: {{admin.address}}
 </p>
 </div>
